# ChangeLog for www-plugins/noscript
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*noscript-2.1 (25 Mar 2011)

  25 Mar 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.9 (07 Mar 2011)

  07 Mar 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.8 (14 Feb 2011)

  14 Feb 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.7 (01 Feb 2011)

  01 Feb 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.6 (19 Jan 2011)

  19 Jan 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.5 (17 Jan 2011)

  17 Jan 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.9.3 (04 Jan 2011)

  04 Jan 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fix Metadata

*noscript-2.0.9.2 (30 Dec 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  30 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.8.1 (09 Dec 2010)

  09 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.7 (26 Nov 2010)

  26 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.5.1 (12 Nov 2010)

  12 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.5 (11 Nov 2010)

  11 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.4 (29 Oct 2010)

  29 Oct 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.3.5 (17 Oct 2010)

  17 Oct 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.3.4 (17 Oct 2010)

  17 Oct 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.3.3 (02 Oct 2010)

  02 Oct 2010; Martin Väth <martin@mvath.de>