@@ -1,4 +1,4 @@
-DIST noscript-2.1.xpi 498559 RMD160 2388c3abaf85d2c7a56b0cc9f330b1e28f0d4773 SHA1 2b3196a5b81ab51e2e99b6f053c79acc8e001ce1 SHA256 87135ee74a5570d0c79831ac6bc39e5ab0026b410634866bf05e08046da6a983
-EBUILD noscript-2.1.ebuild 498 RMD160 640f90c9b670cc42c5dc5891a33a26deb0347051 SHA1 8070d20ad943cd5554f5e0e2d1466f55ac7404fc SHA256 3e89441b6ce46e5b0fdd4779503f2e778e51f28697dafdd4763b7b4db61499b6
-MISC ChangeLog 4320 RMD160 a22a173951fff7915f13186a2d49ec4e70826906 SHA1 3c74e4806fb9d20ab03a3e1a6d07ceb377197f8c SHA256 1cda7fd2a39ddc7444b8270bfc3188cf4c447cb933fd2ae589acc630ef882d22
+DIST noscript-2.1.0.1.xpi 502738 RMD160 4a7a3ac19604da4476b7d9570e7927a1ab1fd6d9 SHA1 4c445f156515d791f17d5ac5ca577575bff72caa SHA256 5b677926a8d4c6bb26b351ebb9dc29e11ba2a9d3a6b40ca8fd9c0d5025519d5f
+EBUILD noscript-2.1.0.1.ebuild 498 RMD160 640f90c9b670cc42c5dc5891a33a26deb0347051 SHA1 8070d20ad943cd5554f5e0e2d1466f55ac7404fc SHA256 3e89441b6ce46e5b0fdd4779503f2e778e51f28697dafdd4763b7b4db61499b6
+MISC ChangeLog 4453 RMD160 7d816c304e1237ed54e0f2e84f243fddbd0f7c86 SHA1 917464cb1f7e3914439e5da3f0c1fd6cf409515f SHA256 9f9e4ab8b5e31174d85c97ebebad8b70154e034a8227507daac1c000505785b7
 MISC metadata.xml 432 RMD160 2ac3f03ed1e8440e58d86185e6cd69adbaf8a4d5 SHA1 de2571a3a7b2d9cd1df761491d8dd3dba0bbe955 SHA256 d05827e585e344d46f3bad637e8b9e44b262c522a39baffcb08c68f3d9e55fde
