@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*noscript-2.1.0.1 (27 Mar 2011)
+
+  27 Mar 2011; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.1 (25 Mar 2011)
 
   25 Mar 2011; Martin Väth <martin@mvath.de>
